force-app/main/default/objects/Maintenance_Recommendation__c/Maintenance_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Maintenance Recommendation</label>
    <nameField>
        <label>Maintenance Recommendation Name</label>
        <type>AutoNumber</type>
        <displayFormat>MRC-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Maintenance Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>