force-app/main/default/objects/Maintenance_Recommendation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipName>Maintenance_Recommendations</relationshipName>
</CustomField>