force-app/main/default/objects/Maintenance_Recommendation__c/fields/AI_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_Explanation__c</fullName>
    <label>AI Explanation</label>
    <type>LongTextArea</type>
    <length>3000</length><visibleLines>4</visibleLines>
</CustomField>