force-app/main/default/objects/Maintenance_Recommendation__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <label>Assigned Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo><relationshipName
  >Assigned_Recommendations</relationshipName>
</CustomField>