force-app/main/default/objects/Maintenance_Recommendation__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Lookup</type>
    <referenceTo>Equipment__c</referenceTo><relationshipName
  >Maintenance_Recommendations</relationshipName>
</CustomField>