force-app/main/default/objects/Maintenance_Recommendation__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName
        >Preventive</fullName><default>true</default></value><value><fullName
        >Corrective</fullName></value><value><fullName
        >Predictive</fullName></value><value><fullName
        >Emergency</fullName></value></valueSetDefinition></valueSet>
</CustomField>