force-app/main/default/objects/Maintenance_Recommendation__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Critical</fullName></value><value><fullName>High</fullName></value><value><fullName>Medium</fullName><default>true</default></value><value><fullName>Low</fullName></value></valueSetDefinition></valueSet>
</CustomField>