force-app/main/default/objects/Maintenance_Recommendation__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>LongTextArea</type>
    <length>3000</length><visibleLines>4</visibleLines>
</CustomField>