force-app/main/default/objects/Maintenance_Recommendation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName
        >Recommended</fullName><default>true</default></value><value><fullName
        >Scheduled</fullName></value><value><fullName
        >In Progress</fullName></value><value><fullName
        >Completed</fullName></value><value><fullName
        >Dismissed</fullName></value></valueSetDefinition></valueSet>
</CustomField>