force-app/main/default/objects/Maintenance_Recommendation__c/fields/Trigger_Source__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Source__c</fullName>
    <label>Trigger Source</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName
        >AI Prediction</fullName></value><value><fullName
        >Manual</fullName></value><value><fullName
        >Scheduled</fullName></value><value><fullName
        >Customer Request</fullName></value></valueSetDefinition></valueSet>
</CustomField>