force-app/main/default/objects/Maintenance_Recommendation__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <type>Lookup</type>
    <referenceTo>Work_Order__c</referenceTo><relationshipName>Maintenance_Recommendations</relationshipName>
</CustomField>